--- a/thankyou.html
+++ b/thankyou.html
@@ -136,6 +136,7 @@
             <div class=" gcui-responsive-width">
                 <div class="gcui-responsive-width centered ">
                     <h2 class="blues michroma text-center">Thank You</h2>
+                    <h2 class="blues michroma text-center">A specialist will contact you shortly</h2>
                 </div>
                 <div class="main-content text-center">
                     <p class="mb3">
